correcting mistake in text-align codein the h2 selector

--- a/css/style.css
+++ b/css/style.css
@@ -47,5 +47,5 @@ img {
 }
 
 h2 {
-    text align: center;
+    text-align: center;
 }
